# c2pa-watermark

./: Dockerfile  README.md  api.py  c2pa_watermark.py  pyproject.toml  render.yaml  requirements.txt  run.py  watermark.py
api/: main.py  server.py
llm/: api.py
watermark/: watermark.py
