[project]
name = "fastapi-watermark"
version = "1.0.0"
requires-python = ">=3.10"
description = "FastAPI server for watermarking images & verifying watermarked images"
dependencies = [
  "fastapi=0.124.0",
  "pydantic=2.12.5",
  "Pillow=12.0.0",
  "trustmark=0.9.0",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["watermark", "image watermark", "trustmark", "image watermaking", "python", "FastAPI"]

[project.urls]
Homepage = "https://github.com/gr4yha7/c2pa-watermark.git"
Repository = "https://github.com/gr4yha7/c2pa-watermark.git"

[project.scripts]
app = "api.server:app"